# landau

./: .gitignore  README.md  cargo.toml
chapter-4/: Cargo.toml  README.md  decay_analysis.m  protein_analysis.m  protein_analysis3d.m  pseudo_analysis.m  walk_analysis.m
chapter-4/data/decay/: data.csv
chapter-4/data/prng/: f.csv  i.csv  r.csv  s.csv
chapter-4/data/protein/: connections.csv  fold.csv  fold.json
chapter-4/data/walk/: walks.csv
chapter-4/src/: decay.rs  main.rs  protein.rs  protein3d.rs  pseudo.rs  walk.rs
