[package]
name = "chapter-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rand = { version = "0.8.5", features = ["alloc"] }
nalgebra = "0.31.2"
serde_json = "1.0.94"
serde = "1.0.153"